<resources>
    <string name="app_name">CleanUpOurSpace</string>
    <string name="CameraFragmentTxt">Camera</string>
    <string name="button_left">Home</string>
    <string name="button_middle">Camera</string>
    <string name="button_right">Profile</string>
    <string name="welcome_string">Welcome to CleanUpOurSpace</string>
    <string name="edit_message">Enter a message:</string>
    <string name="button_send">Send</string>
    <string name="button_analyze">Analyze</string>
    <string name="button_photo">Take Photo</string>
    <string name="take_photo">Take Photo</string>
</resources>